<resources>
    <string name="app_name">Miskaa</string>
    <string name="rest_country">REST Countries</string>
    <string name="press_again">Please press again to exit</string>
    <string name="delete_confirm_msg">Are you sure to delete all the saved data ?</string>
    <string name="yes">Yes, Delete </string>
    <string name="cancel">No, cancel delete</string>
    <string name="no_data">No data found !!</string>
    <string name="ok">OK</string>
    <string name="no_data_to_delete">No data to delete</string>
    <string name="name">Name :</string>
    <string name="capital">Capital :</string>
    <string name="region">Region :</string>
    <string name="sub_region">Subreg :</string>
    <string name="popultn">Population :</string>
    <string name="border">Border :</string>
    <string name="lang">Lang :</string>
    <string name="loading">Loading..</string>
    <string name="pls_wait">Pls wait ...</string>
</resources>