<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8"
    app:cardCornerRadius="@dimen/margin_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/margin_8">

        <ImageView
            android:id="@+id/ivFlag"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            android:src="@mipmap/generic_flag"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCountryName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="India" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/capital"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCapital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="New Delhi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/region"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="Asia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sub_region"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSubregion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="Asia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/popultn"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPopulation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="123456" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/border"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBorder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="[A, B, C]" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/lang"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_normal"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="2.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_regular"
                    tools:text="[A, B, C]" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>

